# zo_call

./: Anchor.toml  kp.json  package-lock.json  package.json
programs/test/: Cargo.toml
programs/test/src/: lib.rs
programs/zo_call/: Cargo.toml
programs/zo_call/src/: call_cpi.rs  lib.rs  set_up.rs
tests/: api.ts  callCpiTest.ts  constants.ts  createControlTest.ts  eztest.ts  initializeControllerTest.ts  initializeZODepositoryTest.ts  instructionNamespace.ts  integrationSuite.ts  progressive_test.ts  test.ts  uxd-idl.ts  uxd.ts  zo.ts
