[package]
name = "zo_call"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "zo_call"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
solana-program = "1.8.12"
spl-token = "3.2.0"
zo-abi = { git = "https://github.com/01protocol/zo-abi", branch = "master", features = ["cpi"] }